<resources>
    <string name="app_name">Dirani Automation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Simple Home Automation</string>
    <string name="nav_header_subtitle">A gift to dear Zaher</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="about_app">حول التطبيق</string>
    <string name="network_configuration">Network Configuration</string>

    <string name="menu_temphum">حرارة - رطوبة</string>
    <string name="menu_waterheater">سخّان المياه</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_understairs">Under Stairs Panel</string>
    <string name="menu_gate">Entrance Gate Panel</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
