<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_understairs">

    <fragment
        android:id="@+id/nav_temphum"
        android:name="com.youssefdirani.automation.ui.TempHumFragment"
        android:label="@string/menu_temphum"
        tools:layout="@layout/fragment_temphum" />

    <fragment
        android:id="@+id/nav_waterheater"
        android:name="com.youssefdirani.automation.ui.WaterHeaterFragment"
        android:label="@string/menu_waterheater"
        tools:layout="@layout/fragment_waterheater" />

    <fragment
        android:id="@+id/nav_understairs"
        android:name="com.youssefdirani.automation.ui.UnderstairsFragment"
        android:label="@string/menu_understairs"
        tools:layout="@layout/fragment_understairs" />

    <fragment
        android:id="@+id/nav_gate"
        android:name="com.youssefdirani.automation.ui.GateFragment"
        android:label="@string/menu_gate"
        tools:layout="@layout/fragment_gate" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.youssefdirani.automation.ui.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.youssefdirani.automation.ui.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>